pages responsive primera parte

--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="#"> <img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
-            <input type="checkbox" name="" id="toggle">
-            <label for="toggle"><i class="material-icons">menu</i></label>
-            <div class="menu">
-                <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="./pages/lesbianas.html">Lesbianas</a></li>
-                <li><a href="./pages/gays.html">Gays</a></li>
-                <li><a href="./pages/trans.html">Trans</a></li>
-                <li><a href="./pages/ingles.html">Inglés</a></li>
-                <li><a href="./pages/sinopsis.html">Sinopsis</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+        <div class="nav-wraper">
+            <nav>
+                <a href="#"> <img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
+                <input type="checkbox" name="" id="toggle">
+                <label for="toggle"><i class="material-icons">menu</i></label>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="./pages/lesbianas.html">Lesbianas</a></li>
+                        <li><a href="./pages/gays.html">Gays</a></li>
+                        <li><a href="./pages/trans.html">Trans</a></li>
+                        <li><a href="./pages/ingles.html">Inglés</a></li>
+                        <li><a href="./pages/sinopsis.html">Sinopsis</a></li>
+                        </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="rainbow"></div>
@@ -122,7 +123,7 @@
                 <li><a href="./pages/gays.html">Gays</a></li>
                 <li><a href="./pages/trans.html">Trans</a></li>
                 <li><a href="./pages/ingles.html">Inglés</a></li>
-                <li><a href="./pages/descripciones.html">Contacto</a></li>
+                <li><a href="./pages/sinopsis.html">Sinopsis</a></li>
         </div>
         <div class="social fot-3">
             <span>Seguinos</span>
