--- a/pages/Sinopsis.html
+++ b/pages/Sinopsis.html
@@ -32,7 +32,7 @@
                     <li><a href="../pages/gays.html">Gays</a></li>
                     <li><a href="../pages/trans.html">Trans</a></li>
                     <li><a href="../pages/ingles.html">Inglés</a></li>
-                    <li><a href="#">Descripciones</a></li>
+                    <li><a href="#">Sinopsis</a></li>
                     </ul>
                 </div>
             </nav>
@@ -71,21 +71,24 @@
     </main>
     <footer class="grid-footer">
         <div class="fot-1">
-            <a href="../index.html"> <img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
+            <a href="../index.html"><img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
-        <div class="card-l fot-2">
+        <div class="list-footer fot-2">
             <ul>
                 <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
                 <li><a href="../pages/gays.html">Gays</a></li>
                 <li><a href="../pages/trans.html">Trans</a></li>
                 <li><a href="../pages/ingles.html">Inglés</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
+                <li><a href="#">Sinopsis</a></li>
         </div>
-        <div class="card-f fot-3">
+        <div class="social fot-3">
             <span>Seguinos</span>
-            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
-            <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a></a>
-            <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a></a>
+            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp">
+            </a>
+            <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a>
+            </a>
+            <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a>
+            </a>
         </div>
     </footer>
 </body>
