--- a/pages/ingles.html
+++ b/pages/ingles.html
@@ -31,61 +31,174 @@
                     <li><a href="../pages/gays.html">Gays</a></li>
                     <li><a href="../pages/trans.html">Trans</a></li>
                     <li><a href="#">Inglés</a></li>
-                    <li><a href="./descripciones.html">Descripciones</a></li>
+                    <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
-    <main class="grid-main-p">
+    <main>
         <div class="rainbow"></div>
-        <section class="banner-ingles titulo">
+        <section class="banner-ingles">
             <div>
                 <h1>Books About Us</h1>
                 <p>The things that scare you the most are the things that bring you closer to who you’re meant to be.”</p>
                 <p>James Brandon, Ziggy, Stardust and Me</p>
             </div>
         </section>
-        <section class="subtitulo">
+        <section>
             <div>
                 <h2>En Inglés</h2>
             </div>
         </section>
-        <section class="tapas">
+        <section class="card-container">
             <div class="card">
-                <img class="cover" src="../assets/imagenes/book-covers/melt-with-you.jpg" alt="Melt with you, tapa de libro.">
-                <h3>MELT WITH YOU - JENNIFER DUGAN</h3>
-                <p>Fallon and Chloe used to be best friends, but last summer they hooked up right before Chloe left for college, and after a series of misunderstandings they are now not speaking to one another. A year later, Chloe is back home from school, and Fallon is doing everything in her power to avoid her--which is especially difficult because their moms own a business together, a gourmet ice cream truck where both girls work. When their moms have the opportunity to make a presentation to some venture capitalists in Texas--something that could seriously expand their business and solve all their money problems to boot--it's up to Fallon to work a series of food truck festivals across the country. But she can't do it alone, and Chloe is the only one available to help. As tensions heat up again between the two, will Fallon be able to keep her cool?</p>
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
             </div>
             <div class="card">
-                <img class="cover" src="../assets/imagenes/book-covers/the-falling-in-love-montage.jpg" alt="The falling in love montage, tapa de libro">
-                <h3>THE FALLING IN LOVE MONTAGE - CIARA SMYTH</h3>
-                <p>Seventeen-year-old cynic Saoirse Clarke isn't looking for a relationship. But when she meets mischievous Ruby, that rule goes right out the window. Sort of. Because Ruby has a loophole in mind: a summer of all the best cliché movie montage dates, with a definite ending come fall—no broken hearts, no messy breakup. It would be the perfect plan, if they weren’t forgetting one thing about the Falling in Love Montage: when it's over, the characters have fallen in love...for real. Ciara Smyth's debut is a delightful, multilayered YA rom-com that will make you laugh, cry, and absolutely fall in love.</p>
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
             </div>
             <div class="card">
-                <img class="cover" src="../assets/imagenes/book-covers/accidental-love.png" alt="Accidental love, tapa de libro.">
-                <h3>ACIDENTAL LOVE - BL MILLER</h3>
-                <p>Accidental Love is a captivating story between Rose Grayson, a destitute lonely young woman and Veronica Cartwright, head of a vast family empire and extraordinarily rich. A horrific accident brings them together, but will the truth end up tearing them apart?</p>
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>                        <a href="../index.html" target="_blank">Ver más...</a>
+                    </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/10-dia-para-G.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
             </div>
         </section>
     </main>
     <footer class="grid-footer">
         <div class="fot-1">
-            <a href="../index.html"> <img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
+            <a href="../index.html"><img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
-        <div class="card-l fot-2">
+        <div class="list-footer fot-2">
             <ul>
                 <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
                 <li><a href="../pages/gays.html">Gays</a></li>
                 <li><a href="../pages/trans.html">Trans</a></li>
-                <li><a href="../pages/ingles.html">Inglés</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
+                <li><a href="#">Inglés</a></li>
+                <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
         </div>
-        <div class="card-f fot-3">
+        <div class="social fot-3">
             <span>Seguinos</span>
-            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp"></a>
-            <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a></a>
-            <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a></a>
+            <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="../assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp">
+            </a>
+            <a class="social-link" href="https://twitter.com/carlacast89?t=Sejik0FYmQeTZZW63l4Xrw&s=08" target="_blank"><img class="icon" src="../assets/imagenes/iconos/twitter-logo.png" alt="Logo de twitter"></a>
+            </a>
+            <a class="social-link" href="https://instagram.com/booksaboutus.tuc?igshid=ZDdkNTZiNTM=" target="_blank"><img class="icon" src="../assets/imagenes/iconos/instagram-logo.png" alt="Logo de instagram"></a>
+            </a>
         </div>
     </footer>
 </body>
